Fixed spacing

--- a/src/pages/ArticlePage.scss
+++ b/src/pages/ArticlePage.scss
@@ -1,3 +1,6 @@
 .post-meta-data {
   color: lightslategrey;
 }
+br {
+  line-height: 300%;
+}
